force-app/main/default/objects/HelloSign__SignerRole__c/HelloSign__SignerRole__c.object-meta.xml
<CustomObject>
    <label>Dropbox Sign Signer Role</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dropbox Sign Signer Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>