force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__DisplayOrder__c</fullName>
    <description>Formula field on the SignerRole__c custom object. The display order for sorting on screen</description>
    <formula>IF(HelloSign__IsCcRole__c || ISPICKVAL(HelloSign__SignerAction__c, &apos;cc&apos;),
  &apos;Copy &apos; + TEXT(HelloSign__SignerOrder__c + 1),
  &apos; Signer &apos; + TEXT(HelloSign__SignerOrder__c + 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Order</label>
    <type>Text</type>
</CustomField>