force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__Get_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Get_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the SignerRole__c custom object. Applies for if the Role Type is Select Opportunity Contact</description>
    <label>Get Primary Contact</label>
    <type>Checkbox</type>
</CustomField>