force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__IsCcRole__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__IsCcRole__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the SignerRole__c custom object. If checked this role is a carbon copy person and not an actual signer.</description>
    <label>CC Role</label>
    <type>Checkbox</type>
</CustomField>