force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__IsLocked__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the SignerRole__c custom object. If checked, this signer role cannot be overridden when requesting a signature for this template.</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>