force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__Original_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Original_Role_Name__c</fullName>
    <description>String field on the SignerRole__c custom object. Stores the original role name if the role
    name has been changed during the edit template process</description>
    <label>Original Role Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>