force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__RelationshipField__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__RelationshipField__c</fullName>
    <description>String field on the SignerRole__c custom object. If Role Type is &quot;Related*&quot;, then this field is required to specify the field name</description>
    <label>Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>