force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__Role_Name__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Role_Name__c</fullName>
    <description>String field on the SignerRole__c custom object. Stores the role name</description>
    <formula>if(contains(text(HelloSign__RoleType__c), &quot;Contact&quot;), &quot;Contact.&quot; &amp; Name,
if(text(HelloSign__RoleType__c) = &quot;Running User&quot;, &quot;Running User.&quot; &amp; Name ,
if(contains(text(HelloSign__RoleType__c), &quot;User&quot;), &quot;User.&quot; &amp; Name,
if(contains(text(HelloSign__RoleType__c), &quot;Lead&quot;), &quot;Lead.&quot; &amp; Name, &quot;Manual.&quot; &amp; Name))))</formula>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>