force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__RoleType__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__RoleType__c</fullName>
    <description>String field on the SignerRole__c custom object. Stores the selectable type of role.  Related or Specific role types require an additional field to be entered.</description>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Select System Contact</fullName>
            </value>
            <value>
                <fullName>Select Account Contact</fullName>
                <default>true</default>
                <label>Select Account Contact</label>
            </value>
            <value>
                <fullName>Select Opportunity Contact</fullName>
            </value>
            <value>
                <fullName>Select Salesforce User</fullName>
            </value>
            <value>
                <fullName>Specific Contact</fullName>
            </value>
            <value>
                <fullName>Specific User</fullName>
            </value>
            <value>
                <fullName>Specific Email</fullName>
            </value>
            <value>
                <fullName>Related Contact</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
            <value>
                <fullName>Running User</fullName>
            </value>
            <value>
                <fullName>Parent Account Contact</fullName>
            </value>
            <value>
                <fullName>Parent Account User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>