force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__SignerAction__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SignerAction__c</fullName>
    <label>Signer Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>signer</fullName>
                <label>Sign</label>
            </value>
            <value>
                <fullName>variable</fullName>
                <label>Sign (Optional)</label>
            </value>
            <value>
                <fullName>cc</fullName>
                <label>Receive copy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>