force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__SignerOrder__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SignerOrder__c</fullName>
    <description>Number field on the SignerRole__c custom object. Store the sort order of the signers and used to refer to them in the template.  This is zero-based and is used by the UI.</description>
    <label>Signer Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>