force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__SpecificContact__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SpecificContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the SignerRole__c custom object. Stores the Specific Contact for the SignerRole__c.</description>
    <label>Specific Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Signer_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>