force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__SpecificEmail__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SpecificEmail__c</fullName>
    <description>Email field on the SignerRole__c custom object. Stores the email address for the SignerRole__c.</description>
    <label>Specific Email</label>
    <type>Email</type>
</CustomField>