force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__SpecificLastName__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SpecificLastName__c</fullName>
    <description>String field on the SignerRole__c custom object. Stores the specific first name for the SignerRole__c</description>
    <label>Specific Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>