force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__SpecificUser__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__SpecificUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>String field on the SignerRole__c custom object. Stores the specific user for the SignerRole__c</description>
    <label>Specific User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signer_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>