force-app/main/default/objects/HelloSign__SignerRole__c/fields/HelloSign__Template__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Template__c</fullName>
    <description>String field on the SignerRole__c custom object. Stores the parent template.</description>
    <label>Dropbox Sign Template</label>
    <referenceTo>HelloSign__Template__c</referenceTo>
    <relationshipLabel>Dropbox Sign Signer Roles</relationshipLabel>
    <relationshipName>Signer_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>